--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pertemuan 5</title>
 </head>
 <body>
-    <p>hellow world</p>
-</body>
+    <a href="p4.html">Menuju Ke Pertemuan5</a>
+    <br>
+    <a href="c:\Users\User\Desktop\WEB 1\Hyperlink">Klik disini</a>
+    <br>
+ </body>
 </html>
